[tool.poetry]
name = "origin-python-challenge"
version = "0.1.0"
description = "Origin challenge for backend candidates"
authors = ["Origin Engineers"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = { extras = ["all"], version = "^0.83.0" }
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
